fix misplaced page nav button on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,6 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+.is-mobile div.awesome-reader-epub button {
+	width: auto !important;
+}
